add the windows installer config. try with an additional module open